--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
 }
 
 nav {
@@ -29,4 +29,92 @@ nav p {
   line-height: 18px;
   letter-spacing: -0.075em;
   color: #FFFFFF;
+}
+
+.card {
+  display: flex;
+  height: 200px;
+  width: 80%;
+  /* justify-content: center; */
+  margin-left: 40px;
+  margin-top: 60px;
+  gap: 20px;
+}
+
+#locationImg {
+  width: 300px;
+  height: 200px;
+}
+
+section {
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* justify-content: space-around; */
+  padding: 20px 0px;
+}
+
+.locationName {
+  /* display: flex; */
+  /* width: 40px; */
+  /* height: 10px; */
+  margin-bottom: 7px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13.5px;
+  line-height: 12px;
+  letter-spacing: 0.17em;
+  color: #2B283A;  
+}
+
+#icon {
+  width: 9.5px;
+  height: 13.5px;
+  /* background: #F55A5A; */
+}
+
+#view {
+  /* width: 106px;  */
+  /* height: 13px; */
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13.5px;
+  line-height: 12px;
+  text-decoration: underline;
+  color: #918E9B;
+}
+
+h1 {
+  height: 40px;
+  margin-bottom: 15PX;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 35px;
+  color: #2B283A;
+}
+
+h6 {
+  height: 14px;
+  margin-bottom: 8px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12.5px;
+  line-height: 14px;
+  color: #2B283A;
+}
+
+#description {
+  height: 45px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1em;
+  line-height: 150%;
+  color: #2B283A;
+}
+
+
+@media only screen and (max-width: 900px) {
+  .card {
+    width: 90%;
+  }
 }
