--- a/src/index.css
+++ b/src/index.css
@@ -35,28 +35,16 @@ nav p {
   display: flex;
   height: 200px;
   width: 80%;
-  /* justify-content: center; */
   margin-left: 40px;
   margin-top: 60px;
   gap: 20px;
 }
 
-#locationImg {
-  width: 300px;
-  height: 200px;
-}
-
 section {
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* justify-content: space-around; */
   padding: 20px 0px;
 }
 
 .locationName {
-  /* display: flex; */
-  /* width: 40px; */
-  /* height: 10px; */
   margin-bottom: 7px;
   font-style: normal;
   font-weight: 400;
@@ -69,12 +57,9 @@ section {
 #icon {
   width: 9.5px;
   height: 13.5px;
-  /* background: #F55A5A; */
 }
 
 #view {
-  /* width: 106px;  */
-  /* height: 13px; */
   font-style: normal;
   font-weight: 400;
   font-size: 13.5px;
@@ -88,8 +73,8 @@ h1 {
   margin-bottom: 15PX;
   font-style: normal;
   font-weight: 700;
-  font-size: 30px;
-  line-height: 35px;
+  font-size: 1.88em;
+  line-height: 117%;
   color: #2B283A;
 }
 
@@ -104,17 +89,55 @@ h6 {
 }
 
 #description {
-  height: 45px;
+  height: 60px;
   font-style: normal;
   font-weight: 400;
   font-size: 1em;
   line-height: 150%;
   color: #2B283A;
+  overflow-y: scroll;
 }
 
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 600px) {
   .card {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    height: 500px;
     width: 90%;
+    justify-content: center;
+    margin: 60px auto;
+    gap: 10px;
+  }
+
+  #locationImg {
+    width: 100%;
+    height: 250px;
+  }
+
+  .locationName {
+    line-height: 17px;
+  }
+
+  h1 {
+    height: 30px;
+    margin-bottom: 15PX;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1.5em;
+    line-height: 117%;
+    color: #2B283A;
+  }
+
+  #description {
+    height: auto;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1em;
+    line-height: 150%;
+    color: #2B283A;
+    overflow-y: visible;
+    margin-bottom: 30px;
   }
 }
